<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_200"
        android:gravity="bottom|end"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/buttonSeven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_zero"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/buttonDecimal"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_dot"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toStartOf="@+id/buttonZero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_plus"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_clear"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_one"
        app:layout_constraintBottom_toTopOf="@+id/buttonDecimal"
        app:layout_constraintEnd_toStartOf="@+id/buttonEight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_three"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_minus"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_two"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintEnd_toStartOf="@+id/buttonThree"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_four"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintEnd_toStartOf="@+id/buttonFive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_six"
        app:layout_constraintBottom_toTopOf="@+id/buttonThree"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/buttonFive"
        app:layout_constraintTop_toBottomOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_multi"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_five"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toStartOf="@+id/buttonSix"
        app:layout_constraintStart_toEndOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight" />


    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_seven"
        app:layout_constraintBottom_toTopOf="@+id/buttonFour"
        app:layout_constraintEnd_toStartOf="@+id/buttonEight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_eight"
        app:layout_constraintBottom_toTopOf="@+id/buttonFive"
        app:layout_constraintEnd_toStartOf="@+id/buttonNine"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/textInput" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_nine"
        app:layout_constraintBottom_toTopOf="@+id/buttonSix"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/textInput" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_div"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/textInput" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDecimal" />

</androidx.constraintlayout.widget.ConstraintLayout>

